clean code logic